dhall/tests/type-errors/unit/SomeNotType.txt
Type error: error: InvalidOptionalType
 --> <current file>:1:0
  |
1 | Some Bool
  | ^^^^^^^^^ InvalidOptionalType
  |
